// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions SourceUpdate 1`] = `
Object {
  "type": "source",
  "value": "test",
}
`;

exports[`actions localeUpdate 1`] = `
Object {
  "type": "locale",
  "value": "test",
}
`;

exports[`actions refreshUpdate 1`] = `
Object {
  "type": "refresh",
}
`;

exports[`actions updatePeriod 1`] = `
Object {
  "type": "period",
  "value": 123,
}
`;
